--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-plugin-pages",
-  "version": "0.31.0",
+  "name": "@tachibana-shin/vite-plugin-pages",
+  "version": "0.31.1-beta.0",
   "packageManager": "pnpm@8.6.0",
   "description": "File system base vue-router plugin for Vite",
   "keywords": [
